[project]
name = "neupan"
version = "0.1.0"
description = ""
authors = [
    {name = "XinChen-stars",email = "1627938222@qq.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ir-sim (>=2.4.1,<3.0.0)",
    "matplotlib (<3.10.0)",
    "torch (>=2.6.0,<3.0.0)",
    "colorama (>=0.4.6,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
